[apiserver] Emit CCTray XML
